tests/contract_testcases/substrate/modifier/declare_05.sol

        abstract contract c {
            modifier foo() {}
        }
// ---- Expect: diagnostics ----
// error: 3:30: missing '_' in modifier
